fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1807,7 +1807,6 @@ input, select, textarea {
 
 		ul li {
 			padding-left: 0.5em;
-			text-align: left;
 			padding-top: 0.0em;
 			margin-top: 0.0em;
 		}
